--- a/avaliacao-pratica-backend/package.json
+++ b/avaliacao-pratica-backend/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mongodb": "^5.8.1"
+    "mongodb": "^5.8.1",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
